--- a/templates/css/blog.css
+++ b/templates/css/blog.css
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   height: 100%;
-  background-image: url('../../img/background-1.jpg');
+  background-image: url('../../assets/img/background-1.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center; 
