--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
           <div class="row">
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../img/landing.jpg" alt="...">
+                <img src="../assets/img/landing.jpg" alt="...">
                 <div class="caption">
                   <h4 class="text-center"><b>Landing Page</b></h4><br>
                   <p class="text-center"><a href="landing.html" class="btn btn-success" role="button">Live Preview</a></p>
@@ -51,7 +51,7 @@
             </div>
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../img/login.jpg" alt="...">
+                <img src="../assets/img/login.jpg" alt="...">
                 <div class="caption">
                   <h4 class="text-center"><b>Login Page</b></h4><br>
                   <p class="text-center"><a href="login.html" class="btn btn-success" role="button">Live Preview</a></p>
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../img/img-3.jpg" alt="...">
+                <img src="../assets/img/img-3.jpg" alt="...">
                 <div class="caption">
                   <h4 class="text-center"><b>Timeline</b></h4><br>
                   <p class="text-center"><a href="timeline.html" class="btn btn-success" role="button">Live Preview</a></p>
@@ -71,7 +71,7 @@
             </div>
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../img/img-4.jpg" alt="...">
+                <img src="../assets/img/img-4.jpg" alt="...">
                 <div class="caption">
                   <h4 class="text-center"><b>Blog</b></h4><br>
                   <p class="text-center"><a href="blog.html" class="btn btn-success" role="button">Live Preview</a></p>
